<resources>
    <string name="app_name">MyMusic</string>
    <string name="musicname">歌曲名</string>
    <string name="singer">歌手</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_2">确认密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknown">保密</string>
    <string name="gender">性别</string>
    <string name="phone">手机号</string>
</resources>
